--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ authors = ["Xanthorrhizol <xanthorrhizol@proton.me>"]
 
 [dependencies]
 reqwest = "0.11.20"
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.105"
+serde_repr = "0.1.16"
 
 [features]
 prod = []
