--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ reqwest = "0.11.20"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
 serde_repr = "0.1.16"
+thiserror = "1.0.48"
 
 [features]
 prod = []
